# kedro-init

./: .copier-answers.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: publish.yml  rtd-preview.yml  test.yml
docs/source/: conf.py
src/kedro_init/: __init__.py  build_config.py  cli.py  config_dirs.py  init.py  modules.py
tests/: test_import.py  test_modules.py
